--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,4 @@
 <p>
   Start editing to see some magic happen :)
 </p>
-<app-navigator-panel></app-navigator-panel>
+<app-navigator-panel progval=30></app-navigator-panel>
