4 files modified, 4 added, 1 deleted

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<hello name="{{ name }}"></hello>
 <p>
   Start editing to see some magic happen :)
 </p>
-<app-navigator-panel progval=30></app-navigator-panel>
+<app-choose-number></app-choose-number>
+<app-navigator-panel progval=300></app-navigator-panel>
