--- a/src/app/navigator-panel/navigator-panel.component.html
+++ b/src/app/navigator-panel/navigator-panel.component.html
@@ -27,4 +27,4 @@ navigator-panel works!
   </div>
 </div>
 
-<p><ngb-progressbar value="700" type="danger"></ngb-progressbar></p>
+<p><ngb-progressbar value="{{progval}}" type="danger"></ngb-progressbar></p>
