4 files modified, 1 added, 1 deleted

--- a/src/app/choose-number/choose-number.component.html
+++ b/src/app/choose-number/choose-number.component.html
@@ -2,4 +2,5 @@
 choose-number works!
 </p>
 
-<input type="number" [(ngModel)]="progval"/>
+<button (click)="setProgVal()">test</button>
+<input type="number" [(ngModel)]="progval"  (change)="setProgVal()"/>
