5 files modified, 3 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<p>
-  Start editing to see some magic happen :)
-</p>
-<app-choose-number></app-choose-number>
-<app-navigator-panel progval=300></app-navigator-panel>
+<app-main-page></app-main-page>
