--- a/src/app/choose-number/choose-number.component.html
+++ b/src/app/choose-number/choose-number.component.html
@@ -1,6 +1,8 @@
 <p>
-choose-number works!
+	choose-number works!
 </p>
-
-<button (click)="setProgVal()">test</button>
-<input type="number" [(ngModel)]="progval"  (change)="setProgVal()"/>
+<div>
+	<h2>Data from A: {{ data }} </h2>
+	<input [(ngModel)] = data /> 
+  <br> 
+</div>
