--- a/src/app/navigator-panel/navigator-panel.component.html
+++ b/src/app/navigator-panel/navigator-panel.component.html
@@ -2,6 +2,6 @@
 navigator-panel works! (compo A)
 </p>
 
-<h2>Data from B: {{ data }} </h2> 
-    <input [(ngModel)] = 'data' /> 
+<h2>Data from B: {{ progVal }} </h2> 
+    <input [(ngModel)] = 'progVal' /> 
     <br><br>
