--- a/src/app/navigator-panel/navigator-panel.component.html
+++ b/src/app/navigator-panel/navigator-panel.component.html
@@ -3,5 +3,7 @@ navigator-panel works! (compo A)
 </p>
 
 <h2>Data from B: {{ progVal }} </h2> 
-    <input [(ngModel)] = 'progVal' /> 
     <br><br>
+
+<p><ngb-progressbar value="{{progVal}}" type="info"></ngb-progressbar></p>
+<p>{{progVal}}</p>
