--- a/src/app/choose-number/choose-number.component.html
+++ b/src/app/choose-number/choose-number.component.html
@@ -2,7 +2,8 @@
 	choose-number works!
 </p>
 <div>
-	<h2>Data from A: {{ data }} </h2>
-	<input [(ngModel)] = data /> 
+	<h2>Data from A: {{ progVal }} </h2>
+	<input type="number" [(ngModel)] = "progVal" /> 
+  <input type="text"  [(ngModel)] = "text"/> 
   <br> 
 </div>
