--- a/src/app/navigator-panel/navigator-panel.component.html
+++ b/src/app/navigator-panel/navigator-panel.component.html
@@ -6,4 +6,4 @@ navigator-panel works! (compo A)
     <br><br>
 
 <p><ngb-progressbar value="{{progVal}}" type="info"></ngb-progressbar></p>
-<p>{{progVal}}</p>
+<p>{{text}}</p>
