4 files modified, 1 added

--- a/src/app/choose-number/choose-number.component.html
+++ b/src/app/choose-number/choose-number.component.html
@@ -3,7 +3,7 @@
 </p>
 <div>
 	<h2>Data from A: {{ progVal }} </h2>
-	<input type="number" [(ngModel)] = "progVal" /> 
+	<input type="number" [(ngModel)] = "progVal" /> <br>
   <input type="text"  [(ngModel)] = "text"/> 
   <br> 
 </div>
